syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.protobuf";
option java_outer_classname = "ProtobufProto";
option go_package = ".;protobuf";

package protobuf;

// The AccServer service definition.
service AccServer {
    // 给这台机器的房间内所有用户发送消息
    rpc SendMsgAll (SendMsgAllReq) returns (SendMsgAllRsp) {}
}

// 给这台机器的房间内所有用户发送消息
message SendMsgAllReq {
    string seq = 1; // 序列号
    uint32 teamId = 2; // teamId 群Id
    uint32 userId = 3; // 发送的用户ID
    string cms = 4; // cms 动作: msg/enter/exit
    uint32 type = 5; // type 消息类型，默认是 1 text
    string msg = 6; // msg
}

message SendMsgAllRsp {
    uint32 retCode = 1;
    string errMsg = 2;
}